# bls_employment_analysis

./: .gitignore  README.md  pyproject.toml
data/: LaborForceParticipationRate.csv
notebooks/: bls_ids  data_export.py  data_pull.py  id_validation.py  main.py  sql_export.py
visualizations/: visualizations.py
