[project]
name = "employment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "prettytable>=3.16.0",
    "psycopg2>=2.9.10",
    "pyspark>=4.0.0",
    "requests>=2.32.4",
]
